bugfix: fill screen on mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -65,7 +65,7 @@ body,
   font-size: 2rem;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 920px) {
   body {
     height: 100vh;
   }
